--- a/ontoCAT/src/log4j.properties
+++ b/ontoCAT/src/log4j.properties
@@ -2,8 +2,8 @@ log4j.rootLogger=OFF
 
 # need these to debug
 # TODO: find a way to selectively turn on/off via ant/maven
-#log4j.logger.net.sf.ehcache=ERROR, CONSOLE
-#log4j.logger.uk.ac.ebi=DEBUG, CONSOLE
+log4j.logger.net.sf.ehcache=ERROR, CONSOLE
+log4j.logger.uk.ac.ebi=DEBUG, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
